--- a/src/components/HeroImg2Styles.css
+++ b/src/components/HeroImg2Styles.css
@@ -7,7 +7,11 @@
 
 .hero-img::before{
     content: "";
-    background: url("https://images.unsplash.com/photo-1580927752452-89d86da3fa0a?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80");
+    background: url("https://img.freepik.com/free-photo/gadgets-black-background_53876-31670.jpg?w=900&t=st=1682353741~exp=1682354341~hmac=aa827c07a1717b4622bf3a0678805efa53ae053c788f7e38f8df353a53ecb6bc");
+
+    background: url("https://img.freepik.com/premium-photo/modern-dark-workspace-with-copy-space-black-leather-background-3d-render_67155-18266.jpg?w=1060");
+
+    background: url("https://img.freepik.com/free-photo/top-view-photo-camera-with-copy-space_23-2148666236.jpg?w=1060&t=st=1682354226~exp=1682354826~hmac=9982a01a0be838e9134150a4b238118d3752420e0034682babc8580b9493d8fe");
     background-size: cover;
     background-position: center top;
     height: 100%;
@@ -16,6 +20,7 @@
     top: 0;
     left: 0;
     z-index: -1;
+    opacity: 1;
 }
 
 .heading{
