--- a/src/components/PricingCardStyles.css
+++ b/src/components/PricingCardStyles.css
@@ -1,4 +1,4 @@
-.pricing{
+/* .pricing{
     width: 100%;
     padding: 6rem 1rem;
     background: black;
@@ -59,4 +59,4 @@
     
     }
     
-}
+} */
